...
            add {
                CardRow(
                    label = "Invite code",
                    value = middleCut(it),
                    code = true,
                    trailingIcon = Icons.Outlined.QrCode,
                    onClickLabel = "Show QR code",
                    onClick = onShowInvite,
                )
            }
        }
        tosUrl?.let { url ->
            add {
...
